--- a/dukeLife/Base.lproj/Main.storyboard
+++ b/dukeLife/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -645,7 +646,8 @@
                                     <color key="titleColor" red="0.0" green="0.32549019610000002" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="fB0-4A-3eK" kind="showDetail" id="yfa-w5-SDk"/>
+                                    <action selector="imagePageButton:" destination="ZOb-Xv-TrV" eventType="touchUpInside" id="rOp-L6-VZc"/>
+                                    <segue destination="fB0-4A-3eK" kind="showDetail" identifier="images" id="yfa-w5-SDk"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="izx-3B-9Cc">
@@ -758,10 +760,10 @@
             </objects>
             <point key="canvasLocation" x="6671.0144927536239" y="241.74107142857142"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Student Image Collection View Controller-->
         <scene sceneID="OrZ-du-oXF">
             <objects>
-                <collectionViewController id="fB0-4A-3eK" sceneMemberID="viewController">
+                <collectionViewController id="fB0-4A-3eK" customClass="studentImageCollectionViewController" customModule="dukeLife" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ktf-A1-TbW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -914,11 +916,18 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Eua-T0-Z0w">
-                                    <rect key="frame" x="369" y="9.5" width="37" height="30"/>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZa-9v-Uhf">
+                                    <rect key="frame" x="360" y="0.0" width="46" height="50"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                     <color key="tintColor" red="0.0" green="0.32549019610000002" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </imageView>
+                                    <state key="normal">
+                                        <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="addPhotoButton:" destination="fB0-4A-3eK" eventType="touchUpInside" id="l9b-Iy-ycE"/>
+                                    </connections>
+                                </button>
                             </subviews>
                         </collectionReusableView>
                         <connections>
@@ -929,7 +938,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i1A-Bk-oOa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7597" y="242"/>
+            <point key="canvasLocation" x="7595.652173913044" y="241.74107142857142"/>
         </scene>
         <!--User Profile View Controller-->
         <scene sceneID="6Tx-sV-nPm">
@@ -1573,7 +1582,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="FUw-Ed-bFr"/>
-        <segue reference="leB-58-hpu"/>
+        <segue reference="58P-YG-oC3"/>
         <segue reference="Mwl-YY-y5E"/>
     </inferredMetricsTieBreakers>
     <resources>
